--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body class="bg-gradient-to-b from-black to-gray-900 bg-no-repeat">
    
-    <div class="flex flex-col justify-center gap-5 items-center">
+    <div class="flex flex-col justify-center items-center">
 
-<div>
-    <input class="border border-black rounded m-2 p-1 box-shadow-xl font-bold" type="text" id="userInput" placeholder="......"> 
-
+<div class="mt-12 flex justify-center items-center">
+    <input class="border border-black rounded w-90 p-2 box-shadow-xl font-bold" type="text" id="userInput" placeholder="......"> 
     <button id="searchBtn" class="border border-black rounded m-2 p-1 bg-red-200 font-bold hover:bg-red-300 ">Search</button>
 </div>   
 
@@ -25,7 +24,7 @@
 <!-- https://gist.github.com/goodreds/5b8a4a2bf11ff67557d38c5e727ea86c -->
 
 <div id="main-card"
-    class="bg-gradient-to-b from-blue-800 to-black max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-16  shadow-xl rounded-lg text-gray-900">
+    class="hidden mb-14 bg-gradient-to-b from-blue-800 to-black max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto mt-3  shadow-xl rounded-lg text-gray-900">
     <div class="rounded-t-lg h-32 overflow-hidden ">
         <!-- <img id="profileBgImg" class="object-cover object-top w-full" src='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR20l9hdlzoz7kAXqycPG-OgNmpf2UGrTLpag&s' alt='Mountain'> -->
     </div>
@@ -63,7 +62,7 @@
         </li>
     </ul>
     <div class="p-4 border-t mx-8 mt-2">
-        <button class="w-1/2 block mx-auto rounded-full bg-gray-900 hover:shadow-lg font-semibold text-white px-6 py-2">Follow</button>
+        <button class="w-1/2 block mx-auto rounded-full bg-gray-700 hover:bg-gray-900 hover:shadow-lg font-semibold text-white px-6 py-2">Follow</button>
     </div>
 </div>
 
@@ -106,8 +105,8 @@
         })
         // mainCard.style.display = "none";
         function displayOutputData(resultIs){
-            // mainCard.style.display = "block";
-            // mainCard.style.backgroundColor ="bg-gradient-to-r from-violet-500 to-fuchsia-500";
+            mainCard.style.display = "block";
+            // mainCard.style.background ="";
             console.log(resultIs);
             userFollowers.innerText = resultIs.followers;
             userFollowing.innerText = resultIs.following;
