--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="bg-black">
     <div class="flex flex-col justify-center items-center">
-        <p class="text-7xl font-bold bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text">
+        <p class="text-6xl font-bold bg-gradient-to-r from-blue-600 via-green-500 to-indigo-400 inline-block text-transparent bg-clip-text">
             GITHUB
         </p>
         <div class="mt-2 flex justify-center items-center">
@@ -30,19 +30,20 @@
         class="hidden bg-gradient-to-b from-blue-800 to-black max-w-2xl mx-4 sm:max-w-sm md:max-w-sm lg:max-w-sm xl:max-w-sm sm:mx-auto md:mx-auto lg:mx-auto xl:mx-auto shadow-xl rounded-lg text-gray-900">
         <div class="rounded-t-lg h-32 overflow-hidden ">
         </div>
-        <div class="mx-auto w-32 h-32 relative -mt-16 border-4 border-white rounded-full overflow-hidden">
+        <div class="mx-auto w-32 h-32 relative -mt-20 border-4 border-white rounded-full overflow-hidden">
             <img id="profileImg" class="object-cover object-center h-32"
                 src='https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ'
                 alt='Woman looking front'>
         </div>
-        <div class="text-center mt-2">
+        <div class="text-center mt-1">
             <h2 id="userName" class="font-semibold text-white">Sarah Smith</h2>
-            <p id="userBio" class="text-gray-300">Freelance Web Designer</p> <br>
+            <p id="userBio" class="text-gray-300">Freelance Web Designer</p>
+            <p id="userlocation" class="text-gray-300">Freelance Web Designer</p>
             <p id="joined"></p>
 
         </div>
 
-        <ul class=" py-4 mt-2 text-gray-200 flex items-center justify-around">
+        <ul class=" py-4 mt-1 text-gray-200 flex items-center justify-around">
             <li class="flex flex-col items-center justify-around">
                 <img class="w-7 h-7  fill-current text-blue-900" src="./icons8-repository-50.png" viewBox="0 0 20 20">
                 </img>
@@ -83,6 +84,7 @@
         let joined = document.getElementById("joined");
         let mainCard = document.getElementById("main-card");
         let followLink = document.getElementById("followLink");
+        
         console.log(followLink);
         // console.log(userProfile, userName, userBio, userRepos, userFollowers, userFollowing, joined);
 
@@ -98,12 +100,13 @@
                 })
                 .then(outputData => {
                     displayOutputData(outputData);
-                    // console.log(outputData);
+                    console.log(outputData);
                 })
                 .catch(error => {
                     // console.log(error);
                     alert("Enter valid User Name")
                 })
+                userInput.value = "";
         })
         // mainCard.style.display = "none";
         function displayOutputData(resultIs) {
@@ -116,6 +119,9 @@
             userProfile.src = resultIs.avatar_url;
             userName.innerText = resultIs.name;
             followLink.href = resultIs.html_url;
+            userBio.innerText =  resultIs.bio ? resultIs.bio : "No Bio Available";
+            document.getElementById("userlocation").innerText = resultIs.location;
+
             joined.innerHTML = `<p class="text-gray-300">Joined : ${new Date(resultIs.created_at).toLocaleDateString('en-US')} </p>`;
         }
 
